#287 - Elastic search connection
- Update swagger file
- rename params on api/v3/terminology/entry/search
- add elastic search parameters to readme
